# curiosity-aware

./: .gitignore  README.md  pyproject.toml  train.py
annotation/: README.md  visual_gap_annotation_50.csv  visual_gap_annotation_50.html  visual_gap_validation_item_diagnostics.csv  visual_gap_validation_results.md
data/sample/: ablation_results.csv  candidate_items.csv  reranked_items.csv  vig_reranked_items.csv  vlm_scene_interpretations.jsonl
docs/: algorithm_design.md  construct_definition.md  data_plan.md  experiment_plan.md  pilot_results.md  project_proposal.md  vlm_image_interpretation.md
scripts/: build_sample_data.py  download_movielens.py  enrich_tmdb_metadata.py  generate_vlm_scene_interpretations.py  run_ablation.py  run_demo.py  run_movielens_experiment.py  sample_visual_annotation_set.py  tune_vig_config.py  validate_visual_annotations.py
src/curiosity_reranker/: __init__.py  baseline.py  comparison.py  features.py  metrics.py  rerank.py  schema.py  vig_rerank.py  visual.py
tests/: test_rerank.py
