[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "visual-gap-reranker"
version = "0.1.0"
description = "A visual information gap reranking artifact for exploratory recommender systems."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
vlm = [
    "accelerate>=0.26",
    "pillow>=10.0",
    "qwen-vl-utils>=0.0.8",
    "torch>=2.1",
    "transformers>=4.49",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
